@@ -76,13 +76,13 @@ x
 0
 1
 1
-error("forbidden gcd t_REAL , t_FFELT.")
+error("forbidden multiplication t_REAL * t_FFELT.")
 error("forbidden gcd t_REAL , t_FFELT.")
 error("forbidden gcd t_REAL , t_FFELT.")
 1
 1
 error("inconsistent gcd t_INTMOD , t_FFELT.")
-error("inconsistent gcd t_FRAC , t_FFELT.")
+error("impossible inverse in FF_Z_Z_muldiv: 2.")
 error("inconsistent gcd t_FRAC , t_FFELT.")
 1
 1
@@ -91,19 +91,19 @@ error("inconsistent gcd t_FRAC , t_FFELT.")
 0
 1
 error("inconsistent gcd t_FRAC , t_FFELT.")
+error("forbidden multiplication t_FFELT * t_COMPLEX.")
 error("forbidden gcd t_FFELT , t_COMPLEX.")
 error("forbidden gcd t_FFELT , t_COMPLEX.")
-error("forbidden gcd t_FFELT , t_COMPLEX.")
+error("forbidden multiplication t_FFELT * t_QUAD.")
 error("forbidden gcd t_FFELT , t_QUAD.")
 error("forbidden gcd t_FFELT , t_QUAD.")
-error("forbidden gcd t_FFELT , t_QUAD.")
-1
-1
-error("inconsistent gcd t_FFELT , t_PADIC.")
-0
+error("forbidden multiplication t_FFELT * t_PADIC.")
 1
 error("inconsistent gcd t_FFELT , t_PADIC.")
+error("forbidden multiplication t_FFELT * t_PADIC.")
+1
 error("inconsistent gcd t_FFELT , t_PADIC.")
+error("forbidden multiplication t_FFELT * t_PADIC.")
 error("inconsistent gcd t_FFELT , t_PADIC.")
 error("inconsistent gcd t_FFELT , t_PADIC.")
 1
@@ -113,4 +113,6 @@ Mod(1, 3)
 1
 (-k + 0.E-38)/k
 1/18446744073709551616
-Total time spent: 4
+Mod(1, 2)*x + Mod(1, 2)
+x + 1
+Total time spent: 2
