@@ -221,7 +221,8 @@ BA159- [pthread] parallel GP could leak memory
        ellinit("14a1",O(2^5)).tate => precision too low in p-adic AGM.
 BA162- polrootsmod(x^3-1, not a prime) -> SEGV (BIB)
 BA163- [windows] MPQS could fail due to temporary files
-  164-  matsnf([27, 0; 0, 3; 1, 1; 0, 0],1+4) -> SEGV
+  164- matsnf([27, 0; 0, 3; 1, 1; 0, 0],1+4) -> SEGV
+  165- gcd(Mod(1,2)*x+Mod(1,2), Mod(0,2)) -> Mod(1,2)
 
   Added
     1- add optional argument to sumdigits to specify the base
@@ -465,6 +466,7 @@ BA 177- libpari support for low-res plot()
    179- ellap(E, p), ellcard(E,p) for E/K number field, and p maximal ideal
    180- [libpari] function sertoser
    181- ellan(E, n) for E/K number field
+   182- [libpari] function gisexactzero
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
